added frontend login and logout page and added a static home page

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://prasad:prasad4135@cluster0.uhshi.mongodb.net/?appName=Cluster0
 JWT_SECRET=sxtNVyOX7E5WRDSCwS6bYzPPyLHW5ROTz8NMv5aM1cZ
+PORT=3002
